# python-course

./: pyproject.toml
backend/: alembic.ini  main.py
backend/api/: __init__.py  dependencies.py
backend/api/crud/: comment_crud.py  course.py  hint_crud.py  lesson.py  module.py  payment_crud.py  payment_packages.py  problems_crud.py  progress_crud.py  stars.py  task.py
backend/api/routers/: comment_router.py  course_router.py  hint_roter.py  lesson_router.py  login_router.py  module_router.py  payment_router.py  problem_router.py  register_router.py  stars_router.py  task_router.py  user_router.py
backend/core/: auth.py  config.py
backend/core/models/: __init__.py  base.py  comments.py  course.py  db_helper.py  lesson.py  module.py  payment.py  problem.py  problemHint.py  problemHintPurchase.py  problemSubmission.py  refresh_token.py  star_transaction.py  task.py  user.py  user_task_progress.py
backend/core/shemas/: UserShema.py  comment_shema.py  course_shema.py  lesson_shema.py  module_shema.py  payment_schema.py  problems_schema.py  task_shema.py
backend/migration/: env.py
backend/utils/: judge0.py
kzn-dev-frontend/: index.html  package-lock.json  package.json
kzn-dev-frontend/src/: App.jsx  index.css  main.jsx
kzn-dev-frontend/src/api/: auth.js  courses.js  payments.js  problems.js  stars.js  tasks.js
kzn-dev-frontend/src/context/: AuthContext.jsx
kzn-dev-frontend/src/pages/: CourseDetail.jsx  CourseDetail.module.css  Courses.jsx  Courses.module.css  Home.jsx  Leaderboard.jsx  Leaderboard.module.css  LessonDetail.jsx  LessonDetail.module.css  (+8 more)
(+31 files in other folders)
