[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.1"
fastapi = "^0.135.1"
uvicorn = {extras = ["standart"], version = "^0.42.0"}
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.13.1"
sqlalchemy = "^2.0.48"
alembic = "^1.18.4"
asyncpg = "^0.31.0"
python-jose = "^3.5.0"
bcrypt = "4.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
